# texfmt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: src_01.tex
src/: lexer.rs  lib.rs  main.rs
tests/: src_01.rs
