[package]
name = "texfmt"
version = "0.1.0"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "(La)TeX formatter."
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/texfmt"
categories = ["command-line-utilities", ] # https://crates.io/category_slugs
keywords = ["tex", "latex", "formatter", "parsing", "text-processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["log"]

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
atty = "0.2.14"
cfg_log = "0.1.1"
clap = "3.2.22"
colored = "2.0.0"
log = { version = "0.4.17", optional = true }
logging_timer = "1.1.0"
nom = "7.1.1"
should-color = { version = "0.5.2", features = ["clap"] }
simplelog = "0.12.0"

[dev-dependencies]
assert2 = "0.3.6"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
